--- a/src/pages/admin-sucursal-perfil/admin-sucursal-perfil.html
+++ b/src/pages/admin-sucursal-perfil/admin-sucursal-perfil.html
@@ -182,7 +182,7 @@
                                             <p class="blanco_2">{{zona.nombre}} - {{zona.consumo}}</p>
                                         </ion-col>
                                         <ion-col col-1>
-                                            <ion-icon class="color2" name="md-brush" class="color2" (click)="modificaZona(zona.id, zona.nombre)"></ion-icon>
+                                            <ion-icon class="color2" name="md-brush" class="color2" (click)="modificaZona(zona.id, zona.nombre, zona.consumo)"></ion-icon>
                                         </ion-col>
                                         <ion-col col-1>
                                             <ion-icon class="color2" name="md-trash" (click)="eliminarZona(zona.id)"></ion-icon>
