Actaulizacion de registro de usuario rp

--- a/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
+++ b/src/pages/admin-menu-reservacion/admin-menu-reservacion.html
@@ -205,7 +205,7 @@
 
         <!-- VER CODIGO DE RP  -->
 
-        <ion-row *ngIf="_userAdmin?.type == 'rp'">
+        <ion-row *ngIf="_sucursal?.type == 'a' || _userAdmin?.type == 'rp'">
             <ion-col>
 
                 <div class="cl">
