--- a/src/pages/admin-rp-codigo/admin-rp-codigo.html
+++ b/src/pages/admin-rp-codigo/admin-rp-codigo.html
@@ -29,7 +29,7 @@
 
           <ion-item>
 
-            <ion-input readonly="{{isReadonly}}" type="text" value="{{ codigo.codigoRP }} "></ion-input>
+            <ion-input readonly="{{isReadonly}}" type="text" value="{{ codigo.codigo }} "></ion-input>
 
           </ion-item>
 
