--- a/src/pages/admin-home/admin-home.html
+++ b/src/pages/admin-home/admin-home.html
@@ -313,7 +313,7 @@
                         <ion-col col-10>
                             <img src="./assets/content/icono2.png" class="imgRes3" alt="">
                             <button ion-button full class="nombreCar3" (click)="goReservacion()">
-                                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Configuraciones
+                                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Reservaciones
                             </button>
                         </ion-col>
                         <ion-col col-1></ion-col>
@@ -383,8 +383,7 @@
 
     <br><br><br>
     <div class="atras" text-center no-lines>
-        <button class="blancos" ion-button round
-            style="min-width: 200px; padding: 10px 16px; height: 85%;font-size: 15px;" (click)="salir()">Cerrar
+        <button class="blancos" ion-button round style="min-width: 200px; padding: 10px 16px; height: 85%;font-size: 15px;" (click)="salir()">Cerrar
             Sesión</button>
         <br>
     </div>
